# ddd-microservices

./: .gitignore  Makefile  README.md  TASKS.md  compose.yml  docker-compose.yml  outbox_pattern.puml  pyproject.toml  setup.cfg  without_outbox_pattern.puml
diagrams/: ack.puml  c2.puml  codegen-consumers.puml  consume_using_schema.puml  consumption.puml  containers_exercise.puml
docker/: Dockerfile
docker/postgres_initdb/: create_databases.sql
examples/: queues.py
libs/container_or_host/: pyproject.toml
libs/mqlib/: pyproject.toml
libs/tracing/: pyproject.toml
libs/tracing/src/tracing/: __init__.py
requirements/: app.in  app.txt  dev.in  dev.txt
services/: prometheus.yml  tempo.yml
used_stuff_market/availability/: alembic.ini
used_stuff_market/availability/availability/: api.py  consumer.py  facade.py  models.py  queues.py
used_stuff_market/availability/tests/: conftest.py  test_availability.py
used_stuff_market/catalog/catalog/: api.py  consumer.py  dao.py  db.py  migrations.py  queues.py
used_stuff_market/catalog/tests/: conftest.py  test_acceptance.py  test_dao.py
used_stuff_market/items/: alembic.ini
used_stuff_market/items/items/: api.py  catalog_client.py  facade.py  item.py  main.py  models.py  outbox_processor.py  queues.py  repository.py
used_stuff_market/items/tests/: conftest.py  test_contract.py  test_items.py
used_stuff_market/libraries/: container_or_host.py  tracing.py
used_stuff_market/libraries/mqlib/: __init__.py
used_stuff_market/likes/: alembic.ini
used_stuff_market/likes/likes/: api.py  facade.py  models.py  queues.py
used_stuff_market/likes/tests/: conftest.py  test_api.py  test_microservice_as_unit.py
used_stuff_market/negotiations/: alembic.ini
used_stuff_market/negotiations/negotiations/: api.py  availability_client.py  db.py  event_bus.py  events.py  factory.py  listeners.py  main.py  migrations.py  money.py  negotiation.py  offer_cap.py  (+2 more)
(+79 files in other folders)
